// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSlugs should return right data  width locales 1`] = `
{
  "homeSlug": {
    "slug": "testPageHome",
  },
  "slugs": [
    {
      "slug": "testPageHome",
      "slug-da": "testPageHomeda",
      "slug-en": "testPageHomeen",
    },
    {
      "slug": "testPage",
      "slug-da": "testPageda",
      "slug-en": "testPageen",
    },
    {
      "slug": "testPageType/widthSubRoute",
      "slug-da": "widthSubRouteda",
      "slug-en": "widthSubRouteen",
    },
    {
      "slug": "withString/subRoute",
      "slug-da": "withString/subRouteda",
      "slug-en": "withString/subRouteen",
    },
    {
      "slug": null,
      "slug-da": "noSlugEn",
      "slug-en": "noSlugEn",
    },
    {
      "slug": "noTransSlug",
      "slug-da": null,
      "slug-en": null,
    },
  ],
}
`;

exports[`getSlugs should return right data no locales  1`] = `
{
  "homeSlug": {
    "slug": "testPageHome",
  },
  "slugs": [
    {
      "slug": "testPageHome",
    },
    {
      "slug": "testPage",
    },
    {
      "slug": "testPageType/widthSubRoute",
    },
    {
      "slug": "withString/subRoute",
    },
    {
      "slug": null,
    },
    {
      "slug": "noTransSlug",
    },
  ],
}
`;
